@@ -5,6 +5,8 @@
 === 0.5.8 ===
 * Added support of DOM parsing and serializing for JSON files.
 * Added io::File::copy methods for copying files.
+* Added io::Path::mkparent methods for creating parent directories.
+* Added io::File::mkparent methods for creating parent directories.
 
 === 0.5.7 ===
 * Added system::get_localtime function.
